--- a/Platformer09/.vscode/settings.json
+++ b/Platformer09/.vscode/settings.json
@@ -55,6 +55,7 @@
     },
     "cSpell.words": [
         "Behaviour",
+        "Mathf",
         "raycast",
         "Raycast",
         "rigidbody",
